build/k8s/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapi2
  labels:
    app: todoapi2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapi2
  template:
    metadata:
      labels:
        app: todoapi2
    spec:
      imagePullSecrets:
        - name: dockerlogin
      containers:
        - name: todoapi
          image: brandallk/gotodoapiprivate:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: db-secrets
              mountPath: /etc/db/secrets/
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /list
              port: 8080
            initialDelaySeconds: 10
      volumes:
        - name: db-secrets
          secret:
            secretName: todoapi-configs
