build/k8s/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapi1
  labels:
    app: todoapi1
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: todoapi1
