build/k8s/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapi2
  labels:
    app: todoapi2
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: todoapi2
